--- a/Develop/package.json
+++ b/Develop/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "inquirer": "^9.2.12",
+    "inquirer": "^8.2.4",
     "jshint": "^2.13.6",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5"
   }
 }
